tests/compile_fail/error_missing_message.rs
use acube::prelude::*;

#[derive(AcubeError, Debug)]
pub enum BadError {
    #[acube(status = 500)]
    MissingMessage,
}

fn main() {}
