tests/compile_fail/error_missing_message.stderr
error: AcubeError variant `MissingMessage` requires #[acube(message = "...")]
 --> $WORKSPACE/tests/compile_fail/error_missing_message.rs
  |
  |     MissingMessage,
  |     ^^^^^^^^^^^^^^
